# rule-based-simulation-engine

./: CMakeLists.txt  README.md
docs/diagrams/: architecture.md
src/awards/: README.md
src/competitions/: CreativityCompetition.h  README.md  TeamCompetition.h
src/core/: README.md  Team.cpp
src/voting/: README.md  Vote.h  Voting.cpp  Voting.h
